# agent

./: .agent_sync.state  .agent_sync_watch.sh  .gitignore  .py_import_completer.db  AGENTS.md  CRASH_PROTOCOL.md  DEBUG_WORKFLOW_PATTERNS.md  HPC_INTERACTIVE_CHECKS_2026-05-04.txt  ORCHESTRATION.md  README.md  REGISTRY_SCHEMA.md  SANDBOX_HARDENING.md  SECURITY_REVIEW_2026-05-04.md  SUGGESTIONS_rbd_hpc_workflow.md  agent-menu  agent_hub.py  agent_hub_bookmark.html  agent_menu.py  codx  config.yaml  copilot.txt  instructions.txt  instructions_gmail.txt  package-lock.json  package.json  promptfooconfig.yaml  pyproject.toml  rbd_cpu_hpc_log_2026-05-04.txt  resume.txt  sample.ods  schema-4.txt  schema.txt  scheme.txt
.codex/agents/: junior.toml  nayar.toml
.cursor/: mcp.json
agent/: pyproject.toml  storage_roots.py
agent/control_plane/: README.md  __init__.py  address_resolver.py  cli_app.py  crash_debugger.py  debug_tool_registry.yaml  fran_adapters.py  hpc.py  local_job_worker.py  local_registry.py  mcp_server.py  models.py  ollama_orchestrator.py  promptfoo_assert.py  promptfoo_provider.py  schemas.py  service.py  test_web.py  web.py
agent/dicom_xnat/: README.md
agent/dicom_xnat_agent/: pyproject.toml
agent/dicom_xnat_agent/dicom_xnat_agent/: __init__.py  cli.py  workflow.py
agent/gmail/: HELP.md  README.md  config.yaml  keybindings.bash
agent/gmail_agent/: HELP.md  README.md  config.yaml  keybindings.bash  pyproject.toml
agent/gmail_agent/agent/: cli.py  gmail_briefing.py  mdt_schedule.py  paths.py  pii.py  render_email.py  tasks.md
agent/gmail_agent/agent/email_pa/: drafts.py  triage.py
agent/gmail_agent/agent/revalidation/: advise.py  build_docx.py  export.py  gmail_scan.py  triage.py
agent/hpc/: AGENTS.md  FUNCTIONS.md  README.md  __init__.py
agent/hpc_agent/: HPC_TOOLS_PLAN.md  README.md  pyproject.toml
agent/linkedin/: README.md  app.db
agent/linkedin_agent/: README.md  pyproject.toml
agent/linkedin_agent/app/: __init__.py  db.py  filtering.py  generation.py  scheduler.py  settings.py
agent/linkedin_agent/config/: feeds.yaml
agent/linkedin_agent/publishers/: __init__.py  x_publisher.py
agent/linkedin_agent/sources/experiments/: sample_experiment.json
agent/linkedin_agent/sources/notes/: sample_note.md
agent/linkedin_agent/tests/: test_pipeline.py
config/: secrets.env.example  secure_files.manifest.tsv.example  telegram_notify.conf.example
docs/: approved_prefixes.md  hpc_jobs_guidance.html
scripts/: agent-hub-service.sh  agent-hub.service  agent_storage_cleanup.sh  clone_dataset_subset.py  codx  dicom_folder_workflow.py  fill_localiser_cache.py  fix_spatial_shape_mp.py  run_with_telegram_notify.sh  setup_telegram_notify.sh  slicer_favorites_sidebar_shim.py  sync_datasets_hpc.py  sync_secure_files.sh  telegram_notify.sh
slicer_extensions/WorkAudit/: CMakeLists.txt  README.md
slicer_extensions/WorkAudit/WorkAudit/: CMakeLists.txt  WorkAudit.py
(+125 files in other folders)
