[tool.uv.workspace]
members = [
  "agent/gmail_agent",
  "agent/linkedin_agent",
  "agent/dicom_xnat_agent",
  "agent/hpc_agent"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workspace"
version = "0.0.0"
description = "Agent workspace"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "mcp>=1,<2",
  "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
