[project]
name = "linkedin-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "apscheduler>=3.10",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "httpx>=0.27"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "publishers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
